Fix alignment for responsive mobile version

--- a/main/src/style.css
+++ b/main/src/style.css
@@ -469,19 +469,9 @@
     padding: 20px;
 }
 
-#hello {
-    font-size: 4vw;
-}
 
-#name {
-    font-size: 8vw;
-}
 
-#code {
-    font-size: 8vw;
-}
-
-@media screen and (max-width: 1800px) {
+@media screen and (max-width: 2000px) {
     #hello {
         font-size: 2vw;
     }
@@ -523,6 +513,32 @@
     }
 }
 
+@media screen and (max-width: 988px) {
+  #mainMenu #navbars #first {
+    font-size: 3vw;
+  }
+
+  #mainMenu #navbars #second {
+    font-size: 3vw;
+  }
+
+  #mainMenu #navbars #third {
+    font-size: 3vw;
+  }
+
+  #mainMenu #navbars #fourth {
+    font-size: 3vw;
+  }
+
+  #mainMenu #navbars #first {
+    font-size: 3vw;
+  }
+
+  #resume-button {
+    font-size: 3vw;
+  }
+
+}
 @media screen and (max-width: 900px) {
     #hello {
         font-size: 2vw;
@@ -553,6 +569,11 @@
     #profile-pic {
       float: none;
       width: 100%;
+      margin-bottom: 30px;
+    }
+
+    .pricing-header {
+      font-size: 4vw;
     }
 }
 
@@ -573,13 +594,9 @@
   #description-text-two {
     font-size: 3.5vw;
   }
-  /* NAVBAR DOESN"T MOVE TO LEFT */
-  #mainMenu {
-    margin-right: 200px;
-  }
-
-
+  
 }
+
 @media screen and (max-width: 400px) {
   .navbar-brand img {
     width: 300px;
@@ -664,6 +681,7 @@
 #description-text-one {
     line-height: 2.0;
     /*display: clear;*/
+    font-size: 15px;
 }
 
 #profile-pic {
@@ -676,6 +694,7 @@
 
 #description-text-two {
     line-height: 2.0;
+    font-size: 15px;
 }
 
 ul {  
